Fix css align issue and add translation

--- a/client/src/app/content/dashboard/content/generic-amount.component.css
+++ b/client/src/app/content/dashboard/content/generic-amount.component.css
@@ -1,6 +1,7 @@
 .total-body {
   font-size: 200px;
   line-height: 175px;
+  text-align: center;
 }
 
 .total-header {
